[package]
name = "tanishqoin-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = { version = "0.7.5", features =  ["macros"] }
base64 = "0.22.0"
bincode = "1.3.3"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"] }
rsa = { version = "0.9.6", features = ["pem", "sha2"] }
secp256k1 = { version = "0.29.0", features = ["rand-std", "serde"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
